# MAI_OOP_3semester

./: .gitmodules  README.md
laba1/: CMakeLists.txt
laba1/src/: main.cpp
laba1/tests/: IsAfraidTest.cpp
laba2/: CMakeLists.txt
laba2/include/: Hex.h
laba2/src/: main.cpp
laba2/tests/: test_Hex.cpp
laba3/: CMakeLists.txt  main.cpp
laba3/include/: array.hpp  figure.hpp  flat_vector.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp  polygonal.hpp
laba3/src/: flat_vector.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp  polygonal.cpp
laba3/tests/: array_tests.cpp  polygonal_tests.cpp
laba4/: CMakeLists.txt  main.cpp
laba4/include/: Array.h  Figure.h  Hexagon.h  Octagon.h  Pentagon.h  Point.h
laba4/src/: Hexagon.cpp  Octagon.cpp  Pentagon.cpp
laba4/tests/: CMakeLists.txt  test_hexagon.cpp  test_octagon.cpp  test_pentagon.cpp
laba5/: CMakeLists.txt
laba5/src/: FixedBlockMemoryResource.hpp  Stack.hpp  StackIterator.hpp  main.cpp
laba5/tests/: CMakeLists.txt  StackTest.cpp
laba6/: CMakeLists.txt
laba6/data/: npc_data.txt
laba6/include/: FileHandler.h  NPC.h  NPCFactory.h  Observer.h  Visitor.h
laba6/src/: FileHandler.c  NPC.c  NPCFactory.c  Observer.c  Visitor.c  main.c
laba7/: CMakeLists.txt
laba7/include/: game.h  npc.h
laba7/src/: game.cpp  main.cpp  npc.cpp
